force-app/main/default/objects/Pricing_Bid_Log_Version_History__c/Pricing_Bid_Log_Version_History__c.object-meta.xml
<CustomObject>
    <description>This object is to store the versions on the update call of the Pricing Bid Log entry data.</description>
    <label>Pricing Bid Log Version History</label>
    <nameField>
        <label>Pricing Bid Log Version History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Bid Logs Version History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>