force-app/main/default/objects/Pricing_Bid_Log_Version_History__c/fields/Analyst__c.field-meta.xml
<CustomField>
    <fullName>Analyst__c</fullName>
    <label>Bid Log Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>