force-app/main/default/objects/Pricing_Bid_Log_Version_History__c/fields/Analyst_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Analyst_Request_Date__c</fullName>
    <label>Analyst Request Date</label>
    <type>Date</type>
</CustomField>