force-app/main/default/objects/Pricing_Bid_Log_Version_History__c/fields/Bid_Version__c.field-meta.xml
<CustomField>
    <fullName>Bid_Version__c</fullName>
    <label>Bid Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>