force-app/main/default/objects/Pricing_Bid_Log_Version_History__c/fields/Competitor_Offering__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Offering__c</fullName>
    <label>Competitor Offering</label>
    <type>TextArea</type>
</CustomField>