force-app/main/default/objects/Pricing_Bid_Log_Version_History__c/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <label>End Customer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>