force-app/main/default/objects/Pricing_Bid_Log_Version_History__c/fields/Is_there_any_Erosion__c.field-meta.xml
<CustomField>
    <fullName>Is_there_any_Erosion__c</fullName>
    <label>Is there any Erosion?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>