force-app/main/default/objects/Pricing_Bid_Log_Version_History__c/fields/Opportunity_3__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity 3</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pricing Bid Logs Version History (Opportunity 3)</relationshipLabel>
    <relationshipName>Pricing_Bid_Logs_Version_History2</relationshipName>
    <type>Lookup</type>
</CustomField>