force-app/main/default/objects/Pricing_Bid_Log_Version_History__c/fields/Opportunity_6__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_6__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity 6</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pricing Bid Logs Version History (Opportunity 6)</relationshipLabel>
    <relationshipName>Pricing_Bid_Logs_Version_History5</relationshipName>
    <type>Lookup</type>
</CustomField>