force-app/main/default/objects/Pricing_Bid_Log_Version_History__c/fields/Opportunity_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number_2__c</fullName>
    <label>Opportunity Number 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>