force-app/main/default/objects/Pricing_Bid_Log_Version_History__c/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pricing Bid Logs Version History</relationshipLabel>
    <relationshipName>Pricing_Bid_Logs_Version_History</relationshipName>
    <type>Lookup</type>
</CustomField>