force-app/main/default/objects/Pricing_Bid_Log_Version_History__c/fields/Second_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Second_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pricing_Bid_Logs_Version_History</relationshipName>
    <type>Lookup</type>
</CustomField>